add delete&add song to playlist fix in.nextLine() after every in.nextInt(); fix getFirst() to get(0)